# AgendaPP

./: .gitignore  README.md  netlify.toml
.github/workflows/: ci.yml
analysis/: README.md  build_metrics.py  pyproject.toml
analysis/agendapp/: __init__.py  indices.py  io.py  transform.py  viz.py
analysis/exports/: metrics.json
analysis/notebooks/: 01_validacion_datos.ipynb  02_shannon_individual.ipynb  03_cv_intrapartidista.ipynb  03_shannon_partido.ipynb  04_jaccard_partido.ipynb  05_correlaciones_inter.ipynb  _make_notebooks.py
analysis/tests/: test_indices.py  test_perfil_concejal.py
apps-script/: README.md
apps-script/src/: Config.gs  Consolidador.gs  Validaciones.gs  WebApp.gs
dashboard/: README.md  netlify.toml
dashboard/public/: config.json  index.html  styles.css
dashboard/public/src/: app.js  metrics.js
dashboard/public/src/views/: auditoria.js  camaleones.js  comparar.js  contadores.js  correlaciones.js  cv.js  instrumentos.js  jaccard.js  partidos.js  resumen.js  shannon.js  shannon_partido.js
docs/: glosario.md  metodologia.md
