[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agendapp"
version = "0.1.0"
description = "Indices y transformaciones para analisis de agendas tematicas de concejales"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "plotly>=5.18",
  "requests>=2.31",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "jupyterlab>=4.0",
  "ipykernel>=6.27",
]

[tool.setuptools.packages.find]
include = ["agendapp*"]
exclude = ["tests*", "notebooks*", "exports*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
